--- a/public/css/style.css
+++ b/public/css/style.css
@@ -94,7 +94,7 @@ label {
     -o-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
     max-width: 1024px;
     width: 100%;
-    margin-top: 20px;
+    margin: 20px;
 }
 
 .image-holder {
@@ -108,7 +108,7 @@ label {
 }
 .form-content {
     width: 100%;
-    padding-top: 65px;
+    padding-top: 35px;
     padding-left: 51px;
     padding-right: 51px;
 }
